# random-commit

./: .gitignore  Cargo.toml  READNE.md  commits.json
src/: commits.rs  main.rs
templates/: index.html  package.json  style.scss
templates/public/: site.webmanifest
