[package]
name = "random-commit"
version = "0.1.0"
authors = ["Dmitry Porunov <hi@dmitry.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.3"
